deployment/manifiest.yml
##Manifiesto forma basica 
## el api version va acorde al kind
apiVersion: apps/v1
#
kind: Deployment
#Etiquedas o nobmres, nombre del pod como se llama 
metadata:
  name: angular-example-deployment
spec:
  selector:
    matchLabels:
      app: angular
  #numero de pods
  replicas: 2
  template: 
    metadata:
      labels:
        app: angular
        # spec anidado template para los pods
    spec: 
      containers:
      - name: angular
      # la imagen tiene que esta en un repo donde esten las imagenes como docker hub, aws, etc....
        image: danielwt1/docker-repo:1.0.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        #Se usa para cuando este lista para recibir trafico si no lo esta queda como 0/1
        ## es en el puerto 80 porque  angular se ejecuta en un nginx y este usa el port 80 
        ## puede cambiar 
        readinessProbe:
          httpGet:
            path: /
            port: 80
        livenessProbe:
          tcpSocket:
            port: 80
        ports:
        - containerPort: 80
