deployment/07-hello-deployment-svc-clusterIP.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      role: hello
  template:
    metadata:
      labels:
        role: hello
    spec:
      containers:
      - name: hello
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
#especifico el nombre del serivico el role es el nobmre del pod o tag con el qeu va a dirigir el trafico  si 
# hago cona consulta al servicio esta me redirige a alguno de los pods con la etiqueta role: "hello"
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    role: hello
