deployment/08-hello-deployment-svc-nodePort.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      role: hello
  template:
    metadata:
      labels:
        role: hello
    spec:
      containers:
      - name: hello
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
# crea un puerto enm cada nodo si yo le pego a ese puerto con la Ip de ese nodo me lleva a alguno de los pods
# el servicio expone un puerto al mundo y si ahgo curl desde mi compu me da respuesta ya que expone ese puerto 
# se especifica el tipo si no el default es cluster IIP 
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30000
  selector:
    role: hello
