deployment/09-hello-deployment-svc-loadBalancer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      role: hello
  template:
    metadata:
      labels:
        role: hello
    spec:
      containers:
      - name: hello
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
#El Kubernates  se conecta al api del proveedor aws, azure digital ocena etc 
# pide un loadBalancer, toma todos pods que tengan la etiqueta  role:---- los coloca en el loadBalancer
# y cuando consulto a la Ip del loadBalancer me responde 
#Es mejor usar laodBalancer porque esta sujeto a que sepa la IP de cada nodo para poder llegar al servicio, en cambio la IP del Balancer siempre es la misma 
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    role: hello
